<resources>
    <string name="app_name">Medkit</string>
    <string name="search">search</string>
    <string name="offers">offers</string>
    <string name="pharmacy">pharmacy</string>
    <string name="schedule">schedule</string>
    <string name="more">more</string>
    <string name="country_logo" translatable="false">country logo</string>
    <string name="select_a_country">Select a Country</string>
    <string name="done">Done</string>
    <string name="english" translatable="false">English</string>
    <string name="arabic" translatable="false">عربي</string>
    <string name="choose_language">Choose language</string>
    <string name="ksa">Saudi Arabia</string>
    <string name="eg">Egypt</string>
    <string name="jr">Jordan</string>
    <string name="lb">Lebanon</string>
    <string name="ng">Nigeria</string>
    <string name="ke">Kenya</string>
    <string name="book_directly">Book a Doctor Appointment</string>
    <string name="book_via_call">Book a Telehealth Call</string>
    <string name="book_service">Book a Service or Operation</string>
    <string name="order_medicines">Order Medicines</string>
    <string name="book_domestic_visit">Book a Home Visit Doctor</string>
    <string name="now_with_medkit_you_can_book_a_home_visit_with_a_specialised_doctor">Now with Medkit you can book a Home visit with a specialised Doctor</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!-- TODO: Remove or change this placeholder text -->

</resources>