<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.BookHomeVisitActivity">

    <com.google.android.material.circularreveal.cardview.CircularRevealCardView
        android:id="@+id/intro_card"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:layout_constraintHeight_percent=".333"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MaterialCardView.RoundedBottomRight">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/app_name_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layoutDirection="locale"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/_24sdp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_medical_bag_01" />
            </LinearLayout>

            <TextView
                android:id="@+id/book"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp"
                android:gravity="center_horizontal"
                android:text="@string/book_domestic_visit"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias=".5" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/now_with_medkit_you_can_book_a_home_visit_with_a_specialised_doctor"
                android:textAlignment="textStart"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias=".9" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

    <com.google.android.material.circularreveal.cardview.CircularRevealCardView
        android:id="@+id/home_visit_form"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:layout_constraintHeight_percent=".333"
        app:layout_constraintTop_toBottomOf="@id/intro_card"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MaterialCardView.RoundedBottomRight">

    </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

    <com.google.android.material.circularreveal.cardview.CircularRevealCardView
        android:id="@+id/instructions"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardBackgroundColor="@color/gin"
        app:layout_constraintHeight_percent=".334"
        app:layout_constraintTop_toBottomOf="@id/home_visit_form"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MaterialCardView.RoundedBottomRight">

    </com.google.android.material.circularreveal.cardview.CircularRevealCardView>
</androidx.constraintlayout.widget.ConstraintLayout>